# Kastia-Backend

./: .env.example  .gitignore  PRIVATE_GROUPS_IMPLEMENTATION.md  Procfile  SUPABASE_DJANGO_AUTH.md  install_log.txt  render-build.sh  render.yaml  requirements.txt  requirements_safe.txt
api/: admin.py  models.py  serializers.py
api/management/commands/: setup_roles.py
backend/: create_admin.py  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: admin.py  group_serializers.py  group_views.py  models.py  supabase_auth.py  urls.py  views.py
backend/api/management/commands/: sync_supabase_users.py
backend/api/migrations/: 0001_initial.py  0002_alter_market_options_market_created_by_and_more.py  0003_trade_outcome.py  0004_profile_ban_reason_profile_banned_at_and_more.py  0005_alter_auditlog_action_alter_auditlog_id_and_more.py
backend/core/: settings.py  urls.py
core/: settings.py  urls.py
