[tool.poetry]
name = "kastia-backend"
version = "1.0.0"
description = "Kastia prediction market backend API"
authors = ["Kastia Team"]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "==3.11.1"
Django = "==6.0.2"
django-cors-headers = "==4.9.0"
djangorestframework = "==3.16.1"
sqlparse = "==0.5.5"
tzdata = "==2025.3"
whitenoise = "==6.6.0"
python-dotenv = "==1.0.0"
gunicorn = "==21.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
